syntax = "proto2";
package protos;


message  VariationalDropoutLayer{
    // regularization coefficient lambda
    optional float regularization_lambda = 1 [default = 0.01];
    // variational_dropout dimension
    optional bool embedding_wise_variational_dropout = 2 [default = false];
}
